--- a/tdl-app/package.json
+++ b/tdl-app/package.json
@@ -2,20 +2,20 @@
   "name": "tdl-app",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
-  },
+  "dependencies": {},
   "scripts": {
     "start": "react-scripts start",
+    "test": "react-scripts test --watchAll",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js --ext .jsx ."
   },
   "eslintConfig": {
     "extends": "react-app"
   },
+  "eslintIgnore": [
+    "node_modules/**"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -27,5 +27,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "jest": "^24.9.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-scripts": "^3.2.0",
+    "react-test-renderer": "^16.10.2"
   }
 }
