added eslint & jest

--- a/tdl-app/package.json
+++ b/tdl-app/package.json
@@ -2,20 +2,20 @@
   "name": "tdl-app",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test --watchAll",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .js --ext .jsx ."
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "eslintIgnore": [
-    "node_modules/**"
-  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -29,12 +29,18 @@
     ]
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "eslint": "^6.5.1",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
     "jest": "^24.9.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "prettier": "^1.18.2",
     "react-scripts": "^3.2.0",
     "react-test-renderer": "^16.10.2"
   }
