--- a/tdl-app/package.json
+++ b/tdl-app/package.json
@@ -11,7 +11,7 @@
     "test": "react-scripts test --watchAll",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "lint": "eslint ./src --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
