--- a/tdl-app/package.json
+++ b/tdl-app/package.json
@@ -11,10 +11,7 @@
     "test": "react-scripts test --watchAll",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src --fix"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "lint": "eslint -c .eslintrc.json ./"
   },
   "browserslist": {
     "production": [
@@ -39,6 +36,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "react-scripts": "^3.2.0",
