--- a/tdl-app/package.json
+++ b/tdl-app/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@material-ui/core": "^4.5.1",
     "prop-types": "^15.7.2",
+    "query-string": "^6.8.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
