--- a/tdl-experience/pom.xml
+++ b/tdl-experience/pom.xml
@@ -47,6 +47,10 @@
 			<optional>false</optional>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
