--- a/tdl-model/pom.xml
+++ b/tdl-model/pom.xml
@@ -41,6 +41,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>false</optional>
@@ -105,7 +110,7 @@
 							<initializeCollections>false</initializeCollections>
 							<includeConstructors>true</includeConstructors>
 							<!-- <customAnnotator>com.diy.labs.model.common.DIYLABLombokAnnotator</customAnnotator> -->
-							<customRuleFactory>com.diy.labs.model.common.DIYLABLombokRuleFactory</customRuleFactory>
+							<!-- <customRuleFactory>com.diy.labs.model.common.DIYLABLombokRuleFactory</customRuleFactory> -->
 							<includeDynamicAccessors>true</includeDynamicAccessors>
 							<includeJsr303Annotations>true</includeJsr303Annotations>
 						</configuration>
